--- a/BibliotecaUteco/BibliotecaUteco/appsettings.json
+++ b/BibliotecaUteco/BibliotecaUteco/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQL": "Server=.;Database=BibliotecaUtecoDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "MSSQL": "Server=DESKTOP-8JHGVSK\\SQLEXPRESS;Database=BibliotecaUtecoDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
 
   "JWT": {
