--- a/BibliotecaUteco/BibliotecaUteco/appsettings.json
+++ b/BibliotecaUteco/BibliotecaUteco/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQL": "Server=DESKTOP-8JHGVSK\\SQLEXPRESS;Database=BibliotecaUtecoDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "MSSQL": "Server=.;Database=BibliotecaUtecoDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
 
   "JWT": {
@@ -15,4 +15,5 @@
     "Audience": "http://localhost:5000",         
     "Key": "RWfnuhEQsLHqTdc1w8QJ5nyDqvMjpO5w31PGGOJL9Uw="
   }
+  
 }
