--- a/BibliotecaUteco/BibliotecaUteco.Client/BibliotecaUteco.Client.csproj
+++ b/BibliotecaUteco/BibliotecaUteco.Client/BibliotecaUteco.Client.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="Blazor.Sonner" Version="0.0.2" />
+        <PackageReference Include="BlazorAnimate" Version="3.0.0" />
         <PackageReference Include="LumexUI" Version="2.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.7" />
