--- a/BibliotecaUteco/BibliotecaUteco.Client/BibliotecaUteco.Client.csproj
+++ b/BibliotecaUteco/BibliotecaUteco.Client/BibliotecaUteco.Client.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.7" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.9" />
+        <PackageReference Include="MudBlazor" Version="8.13.0" />
         <PackageReference Include="Refit" Version="8.0.0" />
         <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
